force-app/main/default/objects/OutletGasketPartNumber__c/OutletGasketPartNumber__c.object-meta.xml
<CustomObject>
    <label>RDOutletGasketPartNumber</label>
    <nameField>
        <label>OutletGasketPartNumber</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>RDOutletGasketPartNumber</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>