force-app/main/default/objects/OutletGasketPartNumber__c/fields/DiscThckLL__c.field-meta.xml
<CustomField>
    <fullName>DiscThckLL__c</fullName>
    <label>DiscThckLL</label>
    <precision>16</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>