force-app/main/default/objects/OutletGasketPartNumber__c/fields/DiscThckUL__c.field-meta.xml
<CustomField>
    <fullName>DiscThckUL__c</fullName>
    <label>DiscThckUL</label>
    <precision>16</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>