force-app/main/default/objects/OutletGasketPartNumber__c/fields/Leadtime__c.field-meta.xml
<CustomField>
    <fullName>Leadtime__c</fullName>
    <label>Leadtime</label>
    <length>255</length>
    <type>Text</type>
</CustomField>