force-app/main/default/objects/OutletGasketPartNumber__c/fields/MCOG__c.field-meta.xml
<CustomField>
    <fullName>MCOG__c</fullName>
    <label>MCOG</label>
    <length>30</length>
    <type>Text</type>
</CustomField>