force-app/main/default/objects/OutletGasketPartNumber__c/fields/OptionCode__c.field-meta.xml
<CustomField>
    <fullName>OptionCode__c</fullName>
    <label>OptionCode</label>
    <length>10</length>
    <type>Text</type>
</CustomField>