force-app/main/default/objects/OutletGasketPartNumber__c/fields/OutletGasketPartNumber__c.field-meta.xml
<CustomField>
    <fullName>OutletGasketPartNumber__c</fullName>
    <label>OutletGasketPartNumber</label>
    <length>255</length>
    <type>Text</type>
</CustomField>