force-app/main/default/objects/OutletGasketPartNumber__c/fields/TestingCode__c.field-meta.xml
<CustomField>
    <fullName>TestingCode__c</fullName>
    <label>TestingCode</label>
    <length>255</length>
    <type>Text</type>
</CustomField>