force-app/main/default/objects/OutletGasketPartNumber__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Component_Scrap__c</columns>
    <columns>DiscThckUL__c</columns>
    <columns>DiscThckLL__c</columns>
    <columns>MCOG__c</columns>
    <columns>Leadtime__c</columns>
    <columns>OptionCode__c</columns>
    <columns>OutletGasketPartNumber__c</columns>
    <columns>Part_Seat__c</columns>
    <columns>Part_Code__c</columns>
    <columns>PTC__c</columns>
    <columns>Qty_Per_Assembly__c</columns>
    <columns>Scrap_Factor__c</columns>
    <columns>SourceCode__c</columns>
    <columns>STC__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CDC_Ext_ID__c</field>
        <operation>equals</operation>
        <value>2140</value>
    </filters>
    <label>All</label>
</ListView>